--- a/index.html
+++ b/index.html
@@ -7,89 +7,72 @@
     <title>Best Whiskey!</title>
     <article class="container">
     <!--Callout-->
-        <section class="callout">
-            <h1>The finest whiskeys delivered to your doorstep</h1>
-            <p class="lead">Signup today to start receiving the world's best whiskey every month. <s>€19.99</s> <strong><mark>First one is free!</mark></strong></p>
-            <button class="btn btn-success btn-lg">Sign Up!</button>
-            <p class="text-muted"><small>You must be over 18 to sign up to our service. Please, drink responsibly.</small></p>
-        </section>
+        <div class="row">
+            <div class="col-12">
+                <section class="callout">
+                   <h1>The finest whiskeys delivered to your doorstep</h1>
+                   <p class="lead">Signup today to start receiving the world's best whiskey every month. <s>€19.99</s> <strong><mark>First one is free!</mark></strong></p>
+                   <button class="btn btn-success btn-lg">Sign Up!</button>
+                   <p class="text-muted"><small>You must be over 18 to sign up to our service. Please, drink responsibly.</small></p>
+                </section>
+            </div>
+        </div>
     <!--/.callout-->
     <hr>
         <!--Quotes-->
         <section class="quotes">
-            <h2 class="text-uppercase">Quotes:</h2>
-            <blockquote class="blockquote">
-                <p>I've been introduced to more than 10 great international whiskeys that I knew about.</p>
-                <p>-Jane Doe</p>
-            </blockquote>
-            <blockquote class="blockquote">
-                <p>I haven't been sober for months!</p>
-                <p>-Jane Doe</p>
-            </blockquote>
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="text-uppercase">Quotes:</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                <blockquote class="blockquote">
+                    <p>I've been introduced to more than 10 great international whiskeys that I knew about.</p>
+                    <p>-Jane Doe</p>
+                </blockquote>
+                </div>
+                <div class="col-12">
+                <blockquote class="blockquote">
+                    <p>I haven't been sober for months!</p>
+                    <p>-Jane Doe</p>
+                </blockquote>
+                </div>
+            </div>
         </section>
     <!--/.quotes-->
     <hr>
     <!--Features-->
         <section class="features">
-            <h2 class="text-uppercase">Features:</h2>
-            <div class="feature">
-                <h3>Feature 1</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+            <div class="row">
+                <div class="col-12"></div>
+                    <h2 class="text-uppercase">Features:</h2>
+                </div>
             </div>
-        <section class="fatures">
-            <h2 class="text-uppercase">Features:</h2>
-            <div class="feature">
-                <h3>Feature 2</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
-            </div>
-        </section>
-        <section class="features">
-            <h2 class="text-uppercase">Features:</h2>
-            <div class="feature">
-                <h3>Feature 3</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
-            </div>
+            <div class="row">
+                <div class="col-12">
+                <div class="feature">
+                    <h3>Feature 1</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                </div>
+                </div>
+                <div class="col-12">
+                <div class="feature">
+                    <h3>Feature 2</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                </div>
+                </div>
+                <div class="row">
+                <div class="feature">
+                    <h3>Feature 3</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                </div>
+                </div>
         </section>  
-         <!--Monthly Favorites-->
-        <section class="monthly favorites">
-            <h2 class="text-uppercase">Favorites:</h2>
-            <table class="table">
-                <thead>
-                <tr>
-                <th scope="col">#</th>
-                <th scope="col">Name</th>
-                <th scope="col">Origin</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                <th scope="row">1</th>
-                <td>Jameson</td>
-                <td>Ireland</td>
-                </tr>
-                <tr>
-                <th scope="row">2</th>
-                <td>Brenne</td>
-                <td>France</td>
-                </tr>
-                <tr>
-                <th scope="row">3</th>
-                <td>Mackmyra</td>
-                <td>Sweden</td>
-                </tr>
-                 <tr>
-                <th scope="row">4</th>
-                <td>Nomael Outland</td>
-                <td>Spain</td>
-                </tr>
-                 <tr>
-                <th scope="row">5</th>
-                <td>Three Ships</td>
-                <td>South Africa</td>
-                </tr>      
-    </article>
+      </article>
 </body>
 </html>
