--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 col-md-6">
                 <blockquote class="blockquote">
                     <p>I've been introduced to more than 10 great international whiskeys that I knew about.</p>
                     <p>-Jane Doe</p>
                 </blockquote>
                 </div>
-                <div class="col-12">
+                <div class="col-12 col-md-6">
                 <blockquote class="blockquote">
                     <p>I haven't been sober for months!</p>
                     <p>-Jane Doe</p>
@@ -51,21 +51,21 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 col-md-6">
                 <div class="feature">
                     <h3>Feature 1</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
                 </div>
                 </div>
-                <div class="col-12">
+                <div class="col-12 col-md-6">
                 <div class="feature">
                     <h3>Feature 2</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
                 </div>
                 </div>
-                <div class="row">
+                 <div class="col-12 d-md-none">
                 <div class="feature">
                     <h3>Feature 3</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
